Finished project-messed up flexboxes would take too much time to fix - Copied some guys project code - Moving on to the java part of the odin project - learned alot of CSS with this project - Flex boxes are still a little bit effy - Will continue to get better at them.

--- a/style.css
+++ b/style.css
@@ -1,85 +1,217 @@
-body, html {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    
-  }
-  
-  .flex-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-  
-  .div1 {
-    flex: 30%;
-    background-color: #1f2937;
-    display: flex;
-    flex-direction: column;
-    
-  }
+html,body{
+  width: 100vw;
+  min-width:1600px;
+  margin:0;
+  padding:0;
+  font-family: Arial, sans-serif;
+}
 
+#header-design{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #1f2937;
+}
+#header-content{
+  display:flex;
+  flex-direction: row;
+  width: 1200px;
+}
 
-  .headerlogo{
-    color:white;
-   text-align: left;
-   margin-left: 100px;
-    font-size: 20px;
-    margin-top: 20px;
-   }
-   .right-headers {
-    list-style: none;
-    padding: 0;
-    margin: 25px;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: flex-end; 
-    position: absolute; 
-    top: 0; 
-    right: 0; 
-    font-size: small;
-  }
-  
-  .right-headers li {
-    color: white;
-  }
+#header-logo{
+  color:#f9faf8;
+  font-size: 24px;
+  width: 700px;
+}
+#header-links{
+  display: flex;
+  width:500px;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-links-div{
+  color: #e5e7eb;
+  font-size: 18px;
+  font-weight: 100;
+}
 
-  .AwesomeWebsite{
-    color:white;
-    margin-left: 100px;
-    position:absolute;
-    margin-top: 75px;
-    
-  }
+#welcome-banner{
+  width: 100%;;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:#1f2937;
+  height: 500px;
+}
+#welcome-content{
+  display: flex;
+  flex-direction: row;
+  width: 1200px;
+  height: 300px;
+  align-items: center;
+  justify-content: center;
+}
+#welcome-text{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 600px;
+  align-items: flex-start;
+}
+#welcome-image{
+  background-color: #b0bec5;
+  height:100%;
+  width:600px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  color:white;
+}
 
-  .Awesomedes{
-    color: #e5e7eb;
-    margin-left: 100px;
-    margin-top: 80px;
-    font-size: smaller;
-  }
+#welcome-text-h2{
+  font-size: 48px;
+  color:#f9faf8;
+  font-weight:bolder;
+}
 
-  .div2 {
-    flex: 25%;
-    background-color: white;
-  }
-  
-  .div3 {
-    flex: 20%;
-    background-color: lightgrey;
-  }
-  
-  .div4 {
-    flex: 18%;
-    background-color: white;
-  }
-  
-  .div5 {
-    flex: 7%;
-    background-color: #1f2937;
-  }
+#welcome-text-p{
+  color: #e5e7eb;
+  font-size: 18px;
+  font-weight: lighter;
+  margin-top:-25px;
+}
+#welcome-text-button{
+  background-color: #3882f6;
+  border-radius: 10px;
+  color:white;
+  font-size: 18px;
+  padding: 8px 30px 8px 30px;
+}
+#raninfo-design{
+  display: flex;
+  padding: 20px 0 20px 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#raninfo-content{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 1200px;
+}
+#raninfo-content-h2{
+  text-align:center;
+  font-size: 36px;
+  font-weight: bolder ;
+  color: #1f2937;
+}
+#raninfo-content-square{
+  border: #3882f6 solid 5px;
+  width: 100%;
+  height: 150px;
+  border-radius: 10px;
+}
+#raninfo-content-grid{
+  width: 70%;
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 80px;
+  grid-template-columns: repeat(4,1fr);
+  column-gap: 50px;
+}
 
-  
+#raninfo-content-grid >div{
+  color: #1f2937;
+}
 
-   
+#quote-design{
+  width:100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #e5e7e5;
+  height: 300px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+#quote-content{
+  display: flex;
+  flex-direction: column;
+  width:1200px;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+#quote-design-quote{
+  font-family: Helvetica, sans-serif;
+  width: 70%;
+  font-size: 36px;
+  font-weight:100;
+  font-style: italic;
+  margin-left: auto;
+  margin-right: auto;
+}
+#quote-design-p{
+  width:70%;
+  display: flex;
+  justify-content: flex-end;
+  font-weight: bolder;
+  font-size:20px;
+}
+#signup-design{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: white;
+  height: 350px;
+}
+
+#signup-content{
+  color:white;
+  padding: 40px 80px 40px 80px;
+  width:800px;
+  display: flex;
+  flex-direction: row;
+  border-radius:10px;
+  background-color:#3882f6;
+}
+
+#signup-content-text{
+  width:70%;
+  line-height: 5px;
+}
+
+#signup-content-text-header{
+  font-weight: bolder;
+  font-size:20px;
+}
+
+#signup-content-button{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width:30%;
+}
+#signup-content-link{
+  border-radius: 10px;
+  border: white solid 2px;
+  padding: 8px 40px 8px 40px;
+}
+
+#footer-design{
+  height:100px;
+  background-color: #1f2937;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color:white;
+}
